Update readme.md
Changed the readme file to reflect the correct order of operations for prereq.